--- a/app/src/main/res/layout/fragment_buy_giftcard.xml
+++ b/app/src/main/res/layout/fragment_buy_giftcard.xml
@@ -4,10 +4,10 @@
     android:layout_height="match_parent"
     tools:context="android.giifty.dk.giifty.BuyGiftcardFrag">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+<android.support.v7.widget.RecyclerView
+    android:id="@+id/recycler_view_id"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"/>
+
 
 </FrameLayout>
