new recovery commit

--- a/app/src/main/res/layout/content_front_page.xml
+++ b/app/src/main/res/layout/content_front_page.xml
@@ -12,10 +12,8 @@
     tools:context="android.giifty.dk.giifty.FrontPage"
     tools:showIn="@layout/app_bar_front_page">
 
-
-    <FrameLayout
-        android:id="@+id/fragment_container_id"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
-
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Hello World!" />
 </RelativeLayout>
