--- a/app/src/main/res/layout/content_front_page.xml
+++ b/app/src/main/res/layout/content_front_page.xml
@@ -4,10 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding="@dimen/app_default_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="android.giifty.dk.giifty.FrontPage"
     tools:showIn="@layout/app_bar_front_page">
