--- a/app/src/main/res/layout/fragment_buy_giftcards.xml
+++ b/app/src/main/res/layout/fragment_buy_giftcards.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Components.BuyGiftCards">
+    tools:context=".Components1.BuyGiftCards">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/gc_recycler_view_id"
