--- a/app/src/main/res/layout/giftcard_gridview_item.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item.xml
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="130dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_test_pic" />
+            android:src="@drawable/ic_no_picture" />
 
         <TextView
             android:id="@+id/discount_text_id"
@@ -40,6 +40,7 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:padding="5dp"
             android:layout_below="@+id/company_image_id"
             android:orientation="vertical">
 
@@ -49,7 +50,7 @@
                 android:layout_height="wrap_content"
                 android:text="Matas"
                 android:textAppearance="?android:attr/textAppearanceMedium"
-                android:textSize="22sp"
+                android:textSize="17sp"
                 android:textStyle="bold" />
 
             <TextView
@@ -57,7 +58,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Se alle 32 mats gavekort"
-                android:textAppearance="?android:attr/textAppearanceMedium" />
+                android:textAppearance="?android:attr/textAppearanceSmall" />
         </LinearLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
