--- a/app/src/main/res/layout/giftcard_gridview_item.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item.xml
@@ -6,6 +6,7 @@
     android:layout_height="220dp"
     android:orientation="vertical"
     app:cardUseCompatPadding="true"
+    android:transitionName="@string/hero_gridview_item"
     card_view:cardBackgroundColor="@color/white"
     card_view:cardCornerRadius="dimen/cardview_default_radius">
 
@@ -33,16 +34,17 @@
             android:text="35%"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/white"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="5dp"
             android:layout_below="@+id/company_image_id"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:layout_marginTop="5dp"
+            android:padding="5dp">
 
             <TextView
                 android:id="@+id/title_id"
@@ -54,11 +56,26 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/title_id"
+                android:layout_toEndOf="@+id/title_id"
+                android:text=" gavekort"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textSize="17sp"
+                android:textStyle="bold" />
+
+            <TextView
                 android:id="@+id/body"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Se alle 32 mats gavekort"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/title_id"
+                android:text="Se alle 32 matas gavekort"
+
                 android:textAppearance="?android:attr/textAppearanceSmall" />
-        </LinearLayout>
+
+        </RelativeLayout>
     </RelativeLayout>
 </android.support.v7.widget.CardView>
