--- a/app/src/main/res/layout/giftcard_gridview_item.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item.xml
@@ -6,7 +6,6 @@
     android:layout_height="220dp"
     android:orientation="vertical"
     app:cardUseCompatPadding="true"
-    android:transitionName="@string/hero_gridview_item"
     card_view:cardBackgroundColor="@color/white"
     card_view:cardCornerRadius="dimen/cardview_default_radius">
 
@@ -20,7 +19,8 @@
             android:layout_width="wrap_content"
             android:layout_height="130dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/ic_no_picture" />
+            android:src="@drawable/ic_no_picture"
+            />
 
         <TextView
             android:id="@+id/discount_text_id"
@@ -42,8 +42,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@+id/company_image_id"
-            android:orientation="vertical"
             android:layout_marginTop="5dp"
+            android:orientation="vertical"
             android:padding="5dp">
 
             <TextView
@@ -73,8 +73,8 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@+id/title_id"
                 android:text="Se alle 32 matas gavekort"
-
-                android:textAppearance="?android:attr/textAppearanceSmall" />
+                android:textAppearance="?android:attr/textAppearanceSmall"
+                android:textSize="13sp" />
 
         </RelativeLayout>
     </RelativeLayout>
