--- a/app/src/main/res/layout/activity_giftcard_details.xml
+++ b/app/src/main/res/layout/activity_giftcard_details.xml
@@ -16,9 +16,10 @@
             android:orientation="vertical">
 
             <ImageView
-                android:id="@+id/imageView"
-                android:src="@drawable/ic_test_pic"
+                android:id="@+id/giftcard_image_id"
+                android:src="@drawable/ic_no_picture"
                 android:layout_width="match_parent"
+                android:transitionName="@string/hero_transition_giftcard"
                 android:scaleType="centerCrop"
                 android:layout_height="210dp" />
 
@@ -34,36 +35,99 @@
                     android:orientation="vertical">
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/created_date_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_gravity="right"
-                        android:text="Small Text"
+                        android:text="14. August"
+                        android:layout_marginBottom="10dp"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
-                    <TextView
-                        android:id="@+id/textView3"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Large Text"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
 
-                    <TextView
-                        android:id="@+id/textView4"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Large Text"
-                        android:textAppearance="?android:attr/textAppearanceLarge" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:text="Værdi "
+                            android:id="@+id/textView3" />
 
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center_horizontal"
-                        android:text="Medium Text"
-                        android:textAppearance="?android:attr/textAppearanceMedium" />
+                        <TextView
+                            android:id="@+id/value_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Large Text"
+                            android:textAppearance="?android:attr/textAppearanceLarge" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:text="@string/kr"
+                            android:id="@+id/textView5" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:text="Din pris "
+                            android:id="@+id/textView4"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/sales_price_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Large Text"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceLarge"
+                            android:text="@string/kr"
+                            android:id="@+id/textView2"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="horizontal"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_marginBottom="10dp"
+
+                        android:gravity="center">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:text="Udløbsdato "
+                            android:id="@+id/textView10" />
+
+                        <TextView
+                            android:id="@+id/expiry_date_id"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_horizontal"
+                            android:text="Medium Text"
+                            android:textAppearance="?android:attr/textAppearanceMedium" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <LinearLayout
@@ -75,37 +139,44 @@
                         android:id="@+id/textView6"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Small Text"
+                        android:text="Info"
                         android:textAppearance="?android:attr/textAppearanceSmall" />
 
                     <View
+                        android:layout_marginTop="2dp"
+                        android:background="@color/icon_gray"
                         android:layout_width="match_parent"
-                        android:layout_height="1.5dp" />
+                        android:layout_marginBottom="6dp"
+                        android:layout_height="1dp" />
 
                     <TextView
-                        android:id="@+id/textView7"
+                        android:id="@+id/description_id"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Medium Text"
                         android:textAppearance="?android:attr/textAppearanceMedium" />
 
                     <View
+                        android:layout_marginTop="6dp"
+                        android:background="@color/icon_gray"
                         android:layout_width="match_parent"
-                        android:layout_height="1.5dp" />
+                        android:layout_marginBottom="4dp"
+                        android:layout_height="1dp" />
                 </LinearLayout>
 
                 <include
-                    android:id="owner_layout_id"
+                    android:id="@+id/owner_layout_id"
                     layout="@layout/image_name_stars" />
             </LinearLayout>
 
             <Button
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
-                android:text="New Button"
-                android:id="@+id/button"
+                android:text="@string/buy_giftcard"
+                android:id="@+id/buy_giftcard_id"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="5dp" />
+                android:layout_marginTop="5dp"
+                android:layout_marginBottom="5dp"/>
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
