--- a/app/src/main/res/menu/activity_front_page_drawer.xml
+++ b/app/src/main/res/menu/activity_front_page_drawer.xml
@@ -5,23 +5,23 @@
         <item
             android:id="@+id/nav_buy_giftcards"
             android:icon="@drawable/ic_purchase_giftcards_24dp"
-            android:title="Import" />
+            android:title="@string/buy_giftcard"/>
         <item
             android:id="@+id/nav_create_giftcards"
             android:icon="@drawable/ic_create_24dp"
-            android:title="Gallery" />
+            android:title="@string/create_giftcard" />
         <item
             android:id="@+id/nav_bought_giftcards"
             android:icon="@drawable/ic_purchased_cards_24dp"
-            android:title="Slideshow" />
+            android:title="@string/purchased_giftcard" />
         <item
             android:id="@+id/nav_my_giftcards"
             android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:title="@string/my_giftcard" />
         <item
             android:id="@+id/nav_nav_settings"
             android:icon="@drawable/ic_settings_24dp"
-            android:title="Tools" />
+            android:title="@string/settings" />
     </group>
 
 
