--- a/app/src/main/res/layout/content_front_page.xml
+++ b/app/src/main/res/layout/content_front_page.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/app_default_margin"
+    android:padding="5dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="android.giifty.dk.giifty.FrontPage"
+    tools:context=".FrontPageActivity"
     tools:showIn="@layout/app_bar_front_page">
 
     <FrameLayout
