--- a/app/src/main/res/layout/nav_header_front_page.xml
+++ b/app/src/main/res/layout/nav_header_front_page.xml
@@ -5,6 +5,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="bottom"
     android:orientation="vertical"
+    android:background="@drawable/icon_sidebar_bg"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
@@ -15,6 +16,7 @@
         android:id="@+id/user_image_id"
         android:layout_width="80dp"
         android:layout_height="90dp"
+        android:src="@drawable/ic_test_pic"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="8dp"
         android:scaleType="fitCenter"
@@ -25,7 +27,6 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         android:text="@string/logged_in_as"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
