--- a/app/src/main/res/layout/company_gridview_item.xml
+++ b/app/src/main/res/layout/company_gridview_item.xml
@@ -14,8 +14,7 @@
             android:id="@+id/frame1_id"
             android:layout_width="162dp"
             android:layout_height="201dp"
-            android:layout_centerInParent="true"
-          >
+            android:layout_centerInParent="true">
 
             <ImageView
                 android:id="@+id/company_image_id"
