--- a/app/src/main/res/layout/fragment_my_giftcards.xml
+++ b/app/src/main/res/layout/fragment_my_giftcards.xml
@@ -9,4 +9,13 @@
         android:layout_height="match_parent"
         android:id="@+id/recycler_view_id"/>
 
+    <TextView
+        android:layout_width="250dp"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="ingen gavekort"
+        android:id="@+id/no_giftcards_text_id"
+        android:layout_gravity="center"
+        android:textStyle="bold|italic" />
+
 </FrameLayout>
