--- a/app/src/main/res/layout/nav_header_front_page.xml
+++ b/app/src/main/res/layout/nav_header_front_page.xml
@@ -34,6 +34,9 @@
         android:id="@+id/user_name_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="anne grethe" />
+
+        android:text="-"
+        android:textStyle="bold|italic"
+        android:textSize="17sp" />
 
 </LinearLayout>
