--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -20,8 +20,8 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="getMainView"
-            android:id="@+id/get_main_id" />
+            android:text="updateUser"
+            android:id="@+id/update_user_id" />
 
         <Button
             android:layout_width="wrap_content"
