--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -12,127 +12,190 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="android.giifty.dk.giifty.CreateUserActivity">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="130dp">
-
-        <com.mikhaellopez.circularimageview.CircularImageView
-            android:id="@+id/user_image_id"
-            android:layout_width="80dp"
-            android:layout_height="90dp"
-            android:layout_gravity="center_horizontal"
-            android:scaleType="fitCenter"
-            android:src="@drawable/ic_test_pic"
-            app:border_color="@color/icon_gray"
-            app:border_width="2dp"
-            app:shadow="false"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Opret bruger"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/textWhite"
-            android:layout_below="@+id/user_image_id"
-            android:layout_alignEnd="@+id/user_image_id" />
-    </RelativeLayout>
-
-    <Button
-        android:id="@+id/facebook_button_id"
-        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:text="Hnet oplysningerne fra Facebook" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView14"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:text="Eller indtast manuelt:"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@color/textWhite" />
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/first_name_id"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Fornavn"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/textWhite"
-            android:textColorHint="@color/textWhite" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_height="130dp"
+            android:layout_marginBottom="15dp">
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/lastNameWrapper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+            <com.mikhaellopez.circularimageview.CircularImageView
+                android:id="@+id/user_image_id"
+                android:layout_width="80dp"
+                android:layout_height="90dp"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_gravity="center_horizontal"
+                android:scaleType="fitCenter"
+                android:src="@drawable/avatar"
+                app:border_color="@color/icon_gray"
+                app:border_width="2dp"
+                app:shadow="false" />
 
-        <EditText
-            android:id="@+id/last_name_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Efternavn"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/textWhite"
-            android:textColorHint="@color/textWhite" />
+            <TextView
+                android:id="@+id/textView12"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/user_image_id"
+                android:layout_centerHorizontal="true"
+                android:text="@string/create_user"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/textWhite" />
+        </RelativeLayout>
 
-    </android.support.design.widget.TextInputLayout>
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/email_id"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Email"
-            android:inputType="textEmailAddress"
-            android:textColor="@color/textWhite"
-            android:textColorHint="@color/textWhite" />
-
-    </android.support.design.widget.TextInputLayout>
-
-
-    <android.support.design.widget.TextInputLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <EditText
-            android:id="@+id/password_id"
+        <Button
+            android:id="@+id/facebook_button_id"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:hint="Password"
-            android:inputType="textPassword"
-            android:textColor="@color/textWhite"
-            android:textColorHint="@color/textWhite" />
-    </android.support.design.widget.TextInputLayout>
+            android:layout_margin="0dp"
+            android:text="@string/fetch_from_facebook" />
 
-    <android.support.design.widget.TextInputLayout
-        android:id="@+id/usernameWrapper"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-        <EditText
-            android:id="@+id/username"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="Password gentaget"
-            android:inputType="textPassword"
-            android:textColor="@color/textWhite"
-            android:textColorHint="@color/textWhite" />
+            android:orientation="vertical"
+            android:padding="5dp">
 
-    </android.support.design.widget.TextInputLayout>
-</LinearLayout>
+            <TextView
+                android:id="@+id/textView14"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/create_manuel"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:textColor="@color/textWhite" />
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/EditTextHintStyle">
+
+                <EditText
+                    android:id="@+id/name_id"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/first_name"
+                    android:inputType="textCapSentences" />
+            </android.support.design.widget.TextInputLayout>
+
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/EditTextHintStyle">
+
+                <EditText
+                    android:id="@+id/email_id"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="@string/email"
+                    android:inputType="textEmailAddress" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/EditTextHintStyle">
+
+                <EditText
+                    android:id="@+id/phone_id"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/phone_nr"
+                    android:inputType="phone" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/EditTextHintStyle">
+
+                <EditText
+                    android:id="@+id/password_id"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal"
+                    android:ems="10"
+                    android:hint="@string/password"
+                    android:inputType="textPassword" />
+            </android.support.design.widget.TextInputLayout>
+
+            <android.support.design.widget.TextInputLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:theme="@style/EditTextHintStyle">
+
+                <EditText
+                    android:id="@+id/password_rep_id"
+                    style="@style/EditTextStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/password_repeated"
+                    android:inputType="textPassword" />
+
+            </android.support.design.widget.TextInputLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    app:theme="@style/EditTextHintStyle">
+
+                    <EditText
+                        android:id="@+id/reg_id"
+                        style="@style/EditTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="@string/reg"
+                        android:inputType="number" />
+
+                </android.support.design.widget.TextInputLayout>
+
+                <android.support.design.widget.TextInputLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="5"
+                    app:theme="@style/EditTextHintStyle">
+
+                    <EditText
+                        android:id="@+id/account_id"
+                        style="@style/EditTextStyle"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="@string/account_nr"
+                        android:inputType="number" />
+
+                </android.support.design.widget.TextInputLayout>
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <Button
+            android:id="@+id/create_user_button_id"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:text="@string/create_user" />
+
+    </LinearLayout>
+</ScrollView>
