--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,8 +4,8 @@
     <dimen name="nav_header_height">160dp</dimen>
 
     <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">12dp</dimen>
-    <dimen name="activity_vertical_margin">12dp</dimen>
+    <dimen name="act_horizontal_margin">12dp</dimen>
+    <dimen name="act_vertical_margin">12dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
     <dimen name="app_default_margin">10dp</dimen>
 </resources>
