updates related to create user process

--- a/app/src/main/res/layout/user_info_layout.xml
+++ b/app/src/main/res/layout/user_info_layout.xml
@@ -21,7 +21,7 @@
         android:layout_marginBottom="10dp"
         android:textSize="16sp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/textWhite" />
+        android:textColor="@color/icon_gray" />
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
