--- a/app/src/main/res/layout/user_account_layout.xml
+++ b/app/src/main/res/layout/user_account_layout.xml
@@ -8,7 +8,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:layout_marginLeft="3dp"
         android:text="@string/account_info_title"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/icon_gray"
