--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -16,7 +16,7 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="updateUser"
+            android:text="fireSignIn"
             android:id="@+id/update_user_id" />
 
         <Button
