--- a/app/src/main/res/layout/activity_giftcard.xml
+++ b/app/src/main/res/layout/activity_giftcard.xml
@@ -3,10 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/default_vertical_margin"
-    android:paddingLeft="@dimen/default_horizontal_margin"
-    android:paddingRight="@dimen/default_horizontal_margin"
-    android:paddingTop="@dimen/default_vertical_margin"
+    android:padding="5dp"
     tools:context="android.giifty.dk.giifty.GiftcardActivity">
 
     <android.support.v7.widget.RecyclerView
