--- a/app/src/main/res/layout/giftcard_gridview_item.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item.xml
@@ -2,7 +2,8 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_width="200dp"
+    android:layout_width="180dp"
+    android:layout_margin="2dp"
     android:layout_height="220dp"
     android:orientation="vertical"
     app:cardUseCompatPadding="true"
@@ -16,7 +17,7 @@
 
         <ImageView
             android:id="@+id/company_image_id"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="130dp"
             android:scaleType="centerCrop"
             android:padding="2dp"
