--- a/app/src/main/res/layout/text_list_item_layout.xml
+++ b/app/src/main/res/layout/text_list_item_layout.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="45dp">
+    android:layout_height="65dp">
 
     <TextView
         android:layout_width="wrap_content"
@@ -9,6 +9,9 @@
         android:layout_gravity="center_vertical"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Large Text"
+        android:textSize="23sp"
+        android:layout_marginLeft="5dp"
+        android:textColor="@color/text_color_gray"
         android:id="@+id/company_name_id"
         android:layout_centerVertical="true"
         android:layout_alignParentStart="true"
