--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#6557CF</color>
+    <color name="colorPrimaryDark">#7B6DDF</color>
     <color name="colorAccent">#5ae373</color>
     <color name="icon_gray">#b9b9b9</color>
     <color name="white">#ffffff</color>
-    <color name="textWhite">#ffffff</color>
+    <color name="text_color_gray">#b9b9b9</color>
+    <color name="text_color_white">#ffffff</color>
     <color name="white_transperant">#1Affffff</color>
     <color name="gray_transperant_50">#80b9b9b9</color>
     <color name="colorPrimary_transperant_50">#803F51B5</color>
