--- a/app/src/main/res/layout/giftcard_gridview_item.xml
+++ b/app/src/main/res/layout/giftcard_gridview_item.xml
@@ -2,14 +2,14 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/tools"
-    android:layout_width="180dp"
+    android:layout_width="175dp"
     android:layout_margin="2dp"
-    android:layout_height="220dp"
+    android:layout_height="210dp"
     android:orientation="vertical"
     app:cardUseCompatPadding="true"
+    app:cardElevation="4dp"
     card_view:cardBackgroundColor="@color/white"
     card_view:cardCornerRadius="dimen/cardview_default_radius">
-
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -18,9 +18,11 @@
         <ImageView
             android:id="@+id/company_image_id"
             android:layout_width="match_parent"
-            android:layout_height="130dp"
+            android:layout_height="116dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginLeft="2dp"
+            android:layout_marginRight="2dp"
             android:scaleType="centerCrop"
-            android:padding="2dp"
             android:transitionName="@string/hero_transition_giftcard"
             android:src="@drawable/ic_no_picture"
             />
@@ -31,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="10dp"
-            android:layout_marginTop="113dp"
+            android:layout_marginTop="103dp"
             android:background="@drawable/discount_circle_background"
             android:gravity="center"
             android:text="35%"
