--- a/app/src/main/res/layout/activity_giftcard_details.xml
+++ b/app/src/main/res/layout/activity_giftcard_details.xml
@@ -27,7 +27,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical"
-                android:padding="10dp">
+                android:padding="@dimen/activity_horizontal_margin">
 
                 <LinearLayout
                     android:layout_width="match_parent"
