--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="@dimen/activity_horizontal_margin"
     tools:context="dk.android.giifty.PaymentActivity">
 
     <LinearLayout
@@ -116,7 +117,7 @@
                 android:layout_width="120dp"
                 android:layout_height="35dp"
                 android:layout_alignParentStart="true"
-                android:layout_marginStart="55dp"
+                android:layout_marginStart="35dp"
                 android:background="@drawable/button_selector"
                 android:gravity="center"
                 android:text="Kort"
@@ -130,7 +131,7 @@
                 android:layout_width="120dp"
                 android:layout_height="35dp"
                 android:layout_alignParentEnd="true"
-                android:layout_marginEnd="55dp"
+                android:layout_marginEnd="35dp"
                 android:background="@drawable/button_selector"
                 android:gravity="center"
                 android:text="Mobilepay"
@@ -152,7 +153,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginBottom="5dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="20dp"
             android:text="----" />
     </LinearLayout>
 </ScrollView>
