--- a/app/src/main/res/layout/company_gridview_item.xml
+++ b/app/src/main/res/layout/company_gridview_item.xml
@@ -20,10 +20,10 @@
                 android:id="@+id/company_image_id"
                 android:layout_width="match_parent"
                 android:layout_height="116dp"
-                android:layout_marginTop="4dp"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:scaleType="centerCrop"
+                android:layout_marginTop="4dp"
+                android:scaleType="fitCenter"
                 android:src="@drawable/ic_no_picture"
                 android:transitionName="@string/hero_transition_giftcard" />
 
