--- a/app/src/main/res/layout/fragment_card_payment.xml
+++ b/app/src/main/res/layout/fragment_card_payment.xml
@@ -94,7 +94,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:ems="10"
-                android:hint="@string/expiry_date"
+                android:hint="@string/date"
                 android:inputType="date"
                 android:textColor="@color/text_color_gray" />
 
