--- a/app/src/main/res/layout/test_layout.xml
+++ b/app/src/main/res/layout/test_layout.xml
@@ -29,4 +29,9 @@
             android:layout_height="wrap_content"
             android:text="Delete user"
             android:id="@+id/delete_user_id" />
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="StartActivity"
+            android:id="@+id/start_activity_id" />
 </LinearLayout>
