--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -7,8 +7,9 @@
     <dimen name="default_horizontal_margin">12dp</dimen>
     <dimen name="default_vertical_margin">12dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
-    <dimen name="app_default_margin">10dp</dimen>
+    <dimen name="app_default_margin">14dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 
-    <dimen name="activity_horizontal_margin">14dp</dimen>
-    <dimen name="activity_vertical_margin">14dp</dimen>
 </resources>
