--- a/app/src/main/res/layout/fragment_my_giftcards.xml
+++ b/app/src/main/res/layout/fragment_my_giftcards.xml
@@ -1,21 +1,22 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="android.giifty.dk.giifty.MyGiftcardsFrag">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".FrontPageActivity">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_id"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/recycler_view_id"/>
+        android:layout_height="match_parent" />
 
     <TextView
+        android:id="@+id/no_giftcards_text_id"
         android:layout_width="250dp"
         android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="ingen gavekort"
-        android:id="@+id/no_giftcards_text_id"
         android:layout_gravity="center"
+        android:visibility="invisible"
+        android:text="ingen gavetkort"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         android:textStyle="bold|italic" />
 
 </FrameLayout>
