signindialog added with related

--- a/app/src/main/res/layout/nav_header_front_page.xml
+++ b/app/src/main/res/layout/nav_header_front_page.xml
@@ -24,11 +24,11 @@
         app:border_width="2dp"
         app:shadow="false"/>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/logged_in_as"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="@string/logged_in_as"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1" />-->
 
     <TextView
         android:id="@+id/user_name_id"
@@ -37,6 +37,6 @@
 
         android:text="-"
         android:textStyle="bold|italic"
-        android:textSize="17sp" />
+        android:textSize="19sp" />
 
 </LinearLayout>
