--- a/app/src/main/res/layout/activity_create_barcode.xml
+++ b/app/src/main/res/layout/activity_create_barcode.xml
@@ -25,7 +25,7 @@
         android:text="Start scanning" />
 
     <TextView
-        android:id="@+id/textView16"
+        android:id="@+id/barcode_text_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/barcode_view_id"
